--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="form-field">
 			<label>Phone No.</label>
-			<input type="tel" name="phone" autofocus required pattern="[0-9]{10}" />
+			<input type="tel" name="phone" autofocus required pattern="[0-9]{10}" maxlength="10" />
 		</div>
 		<div class="form-field">
 			<label>Password</label>
