--- a/public/signup.html
+++ b/public/signup.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="form-field">
 			<label>Phone No.</label>
-			<input type="tel" name="phone" required  pattern="[0-9]{10}" />
+			<input type="tel" name="phone" required  pattern="[0-9]{10}" maxlength="10" />
 		</div>
 		<div class="form-field">
 			<label>Password</label>
