--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body class="chat">
 
-<div class="chat__sidebar">
+<div class="chat__sidebar" style="overflow-x: hidden;">
 	<div style="text-align: center;">
 	<h3 style="text-align: center;">Welcome</h3>
 	<img src="" height="100px" width="100px" id="profile_photo" style="margin-bottom: 10px;">
@@ -30,12 +30,7 @@
 <div style="position: absolute;top: 10px;right: 10px">
 	<button id="logout">Logout</button>
 </div>
-<div id="user_profile">
-	
-</div>
-<div class="chat__footer" style="position: absolute;bottom: 0">
-
-</div>
+<div id="user_profile"></div>
 </div>
 
 <script type="text/template" id="user_template">
