--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="form-field">
 			<label>Password</label>
-			<input type="password" name="password" required />
+			<input type="password" name="password" required minlength="6" maxlength="30" />
 		</div>
 		<div class="form-field">
 			<button>Login</button>
