--- a/public/signup.html
+++ b/public/signup.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="form-field">
 			<label>Display Name</label>
-			<input type="text" name="name" autofocus required />
+			<input type="text" name="name" autofocus required minlength="3" maxlength="30" />
 		</div>
 		<div class="form-field">
 			<label>Phone No.</label>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="form-field">
 			<label>Password</label>
-			<input type="password" name="password" required />
+			<input type="password" name="password" required minlength="6" maxlength="30" />
 		</div>
 		<div class="form-field">
 			<label>Gender</label>
@@ -37,7 +37,7 @@
 		</div>
 		<div class="form-field">
 			<label>Profile Image</label>
-			<input type="file" name="profile-image" id="dp" required>
+			<input type="file" name="profile-image" id="dp" required accept="image/*">
 		</div>
 		<div class="form-field">
 			<button>SignUp</button>
