--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,7 +11,7 @@
 <div class="chat__sidebar" style="overflow-x: hidden;">
 	<div style="text-align: center;">
 	<h3 style="text-align: center;">Welcome</h3>
-	<img src="" height="100px" width="100px" id="profile_photo" style="margin-bottom: 10px;">
+	<img src="" height="100px" width="100px" id="profile_photo" style="margin-bottom: 10px;border-radius:50%;">
 	<h3 id="user_name" style="text-align: center;"></h3>
 	<button id="upload">Upload</button>
 	<input type="file" name="file" id="photo" style="display: none;margin-bottom: 10px">
@@ -21,7 +21,7 @@
 	</div>
 </div>
 <script type="text/template" id="image_template">
-	<img src="{{img_src}}" height="100px" width="100px" id="{{img_id}}" style="margin-bottom: 10px;">
+	<img src="{{img_src}}" height="100px" width="100px" id="{{img_id}}" style="margin-bottom: 10px;border-radius:50%;">
 </script>
 <div class="chat__main">
 
